FIX: Blog Image Overflow on Small Dev.

--- a/src/styles/BlogPost.module.scss
+++ b/src/styles/BlogPost.module.scss
@@ -260,6 +260,7 @@
 
     img {
       max-width: 275px;
+      width: 275px;
     }
 
     .introduction,
@@ -311,5 +312,16 @@
     blockquote {
       max-width: 200px;
     }
+  }
+}
+
+@media (max-width: 600px) and (orientation: portrait) {
+  .container main img {
+    max-width: 300px;
+  }
+}
+@media (max-width: 400px) and (orientation: portrait) {
+  .container main img {
+    max-width: 225px;
   }
 }
